// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterSignup Snapshots Renders the bad email UI snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-rc-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <form
      className="css-1xdhyk6"
      data-testid="ds-form"
      id="-rc--form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        id="-rc--form-parent"
      >
        <div
          className="css-l5w1vc"
          id="-rc--form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="-rc--textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              htmlFor="-rc--textInput"
              id="-rc--textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="-rc--textInput-helperText"
                aria-invalid={true}
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-1xdhyk6"
                disabled={false}
                id="-rc--textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={true}
              data-testid="ds-helperErrorText"
              id="-rc--textInput-helperText"
            >
              <div
                className="css-0"
                dangerouslySetInnerHTML={
                  {
                    "__html": "There was a problem. Please enter a valid email address.",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          id="-rc--form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="-rc--submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the custom error state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-rl-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-3u73el"
          data-file-name="SvgErrorFilled"
          focusable={false}
          role="img"
          title="errorFilled icon"
        />
        <p
          className="chakra-text css-ia9jis"
          data-testid="ds-text"
        >
          Oops! Something went wrong.
        </p>
      </div>
      <div>
        If the error persists,
        <a
          href="mailto:enews@nypl.org?subject=Please re-activate my e-mail address"
        >
          contact our e-mail team
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default confirmation state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-rm-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgActionCheckCircleFilled"
          focusable={false}
          role="img"
          title="actionCheckCircleFilled icon"
        />
        <p
          className="chakra-text css-1e5ycxp"
          data-testid="ds-text"
        >
          Thank you for signing up!
        </p>
      </div>
      <p
        className="chakra-text css-1xdhyk6"
        data-testid="ds-text"
      >
        You can update your email subscription preferences at any time using the links at the bottom of the email.
      </p>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default error state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-rk-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-3u73el"
          data-file-name="SvgErrorFilled"
          focusable={false}
          role="img"
          title="errorFilled icon"
        />
        <p
          className="chakra-text css-ia9jis"
          data-testid="ds-text"
        >
          Oops! Something went wrong.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default form UI snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-r0-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <form
      className="css-1xdhyk6"
      data-testid="ds-form"
      id="-r0--form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        id="-r0--form-parent"
      >
        <div
          className="css-l5w1vc"
          id="-r0--form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="-r0--textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              htmlFor="-r0--textInput"
              id="-r0--textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="-r0--textInput-helperText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-1xdhyk6"
                disabled={false}
                id="-r0--textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="-r0--textInput-helperText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          id="-r0--form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="-r0--submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the form UI with description snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-r8-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <p
      className="chakra-text css-1xdhyk6"
      data-testid="ds-text"
    >
      Why not?
    </p>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <form
      className="css-1xdhyk6"
      data-testid="ds-form"
      id="-r8--form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        id="-r8--form-parent"
      >
        <div
          className="css-l5w1vc"
          id="-r8--form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="-r8--textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              htmlFor="-r8--textInput"
              id="-r8--textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="-r8--textInput-helperText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-1xdhyk6"
                disabled={false}
                id="-r8--textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="-r8--textInput-helperText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          id="-r8--form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="-r8--submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the form UI with formHelperText snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-r4-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <form
      className="css-1xdhyk6"
      data-testid="ds-form"
      id="-r4--form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        id="-r4--form-parent"
      >
        <div
          className="css-l5w1vc"
          id="-r4--form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="-r4--textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              htmlFor="-r4--textInput"
              id="-r4--textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="-r4--textInput-helperText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-1xdhyk6"
                disabled={false}
                id="-r4--textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="-r4--textInput-helperText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
                You need help.
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          id="-r4--form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="-r4--submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the submitting state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="-rg-"
>
  <div
    className="chakra-stack newsletter-signup-appeal css-1ey9w6j"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack newsletter-signup-form css-tl3ftk"
  >
    <form
      className="css-1xdhyk6"
      data-testid="ds-form"
      id="-rg--form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        id="-rg--form-parent"
      >
        <div
          className="css-l5w1vc"
          id="-rg--form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="-rg--textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              htmlFor="-rg--textInput"
              id="-rg--textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="-rg--textInput-helperText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-1xdhyk6"
                disabled={true}
                id="-rg--textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="-rg--textInput-helperText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          id="-rg--form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            disabled={true}
            id="-rg--submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
